# preview-service-alpha

./: .env.local.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: preview-deploy.yml  preview-teardown.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_create_users_table.py  b7c8d9e0f1a2_add_user_active_flag.py
api/: database.py  main.py  settings.py
api/core/: auth.py
api/models/: user.py
api/routes/: users.py
api/schemas/: user.py
scripts/: seed.py
tests/: conftest.py  test_auth.py  test_health.py  test_users.py
