[project]
name = "service-alpha"
version = "0.1.0"
description = "Users microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "sqlalchemy==2.0.27",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
]

[tool.setuptools.packages.find]
include = ["api*"]

[project.optional-dependencies]
dev = [
    "httpx==0.27.0",
    "pytest==8.0.2",
    "ruff==0.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["api"]
